Custom Normal Data Transfer Crashes when some vertexes have no faces #53343

Closed
opened 2017-11-18 18:09:14 +01:00 by Tapple Gao · 8 comments

System Information
Windows 10 x64, nVidia GEForce 650m

Blender Version
Broken: 2.79 d697e3d
Worked: (optional)

The data transfer modifier can cause blender to segfault if the source mesh has some vertices without a face, due to either deletion or mask modifier

Exact steps for others to reproduce the error

  • Open the attached blend file. it opens in edit mode on the data transfer source mesh
  • Either delete the selected vertex, or remove it from the "hide1" vertex group, which is part of a mask modifier

Press tab to exit edit mode. Blender immediately crashes

data transfer normals modifier crash3.blend

**System Information** Windows 10 x64, nVidia GEForce 650m **Blender Version** Broken: 2.79 d697e3d Worked: (optional) The data transfer modifier can cause blender to segfault if the source mesh has some vertices without a face, due to either deletion or mask modifier **Exact steps for others to reproduce the error** - Open the attached blend file. it opens in edit mode on the data transfer source mesh - Either delete the selected vertex, or remove it from the "hide1" vertex group, which is part of a mask modifier # Press tab to exit edit mode. Blender immediately crashes [data transfer normals modifier crash3.blend](https://archive.blender.org/developer/F1156089/data_transfer_normals_modifier_crash3.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @tapplek

Added subscriber: @tapplek

Added subscriber: @zeauro

Added subscriber: @zeauro

I can't reproduce crash on ubuntu 16.04 with master 40c8a18 and 2.79 with provided .blend file.

I can't reproduce crash on ubuntu 16.04 with master 40c8a18 and 2.79 with provided .blend file.

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-11-19 17:36:37 +01:00

Crash confirmed here with an ASAN debug build (@zeauro release builds on Linux are tremendously resilient to small invalid memory accesses for some reasons, unlike on Windows… But Linux debug builds with ASAN enabled do spot any illegal access. ;) ).

Crash confirmed here with an ASAN debug build (@zeauro release builds on Linux are tremendously resilient to small invalid memory accesses for some reasons, unlike on Windows… But Linux debug builds with ASAN enabled do spot any illegal access. ;) ).

This issue was referenced by 784614655f

This issue was referenced by 784614655f55f81eec04c2b898e8ab8dbb99a3ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53343
No description provided.